[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/kenney_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/kenney_mini.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/kenney_pixel.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/gui/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://src/world/World.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/textures/colored_transparent.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 2.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5 )
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 10.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer/Title:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 10 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/VBoxContainer/Story:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5.5, 10 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Fog:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 10 )
}

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

// Gonkee's fog shader for Godot 3 - full tutorial https://youtu.be/QEaTsz_0o44
// If you use this shader, I would prefer it if you gave credit to me and my channel

uniform vec4 color :hint_color = vec4(0.35, 0.48, 0.95, 1.0);
uniform int OCTAVES = 4;
uniform float fog_scale :hint_range(1.0, 50.0) = 20.0;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(56, 78)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * fog_scale;

	vec2 motion = vec2( fbm(coord + vec2(TIME * -0.5, TIME * 0.5)) );

	float final = fbm(coord + motion);

	COLOR = vec4(color.rgb, final * 0.5);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color = Color( 0.478431, 0.266667, 0.290196, 1 )
shader_param/OCTAVES = 4
shader_param/fog_scale = 20.0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -384.0
margin_right = 683.0
margin_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 140
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingTop" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_right = 1366.0

[node name="Title" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 140.0
margin_right = 1366.0
margin_bottom = 212.0
custom_constants/separation = 14
alignment = 1

[node name="RP" type="Label" parent="CanvasLayer/VBoxContainer/Title"]
margin_left = 421.0
margin_right = 793.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.705882, 0.105882, 1 )
custom_colors/font_outline_modulate = Color( 0.956863, 0.705882, 0.105882, 1 )
custom_colors/font_color_shadow = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Role Playing"
align = 1
valign = 1

[node name="Golf" type="Label" parent="CanvasLayer/VBoxContainer/Title"]
margin_left = 807.0
margin_right = 945.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.235294, 0.67451, 0.843137, 1 )
custom_colors/font_outline_modulate = Color( 0.956863, 0.705882, 0.105882, 1 )
custom_colors/font_color_shadow = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Golf"
align = 1
valign = 1

[node name="Title2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 352.0
margin_right = 1366.0
margin_bottom = 424.0
custom_constants/separation = 14
alignment = 1

[node name="RP" type="Label" parent="CanvasLayer/VBoxContainer/Title2"]
margin_left = 421.0
margin_right = 793.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.705882, 0.105882, 1 )
custom_colors/font_outline_modulate = Color( 0.956863, 0.705882, 0.105882, 1 )
custom_colors/font_color_shadow = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Role Playing"
align = 1
valign = 1

[node name="Golf" type="Label" parent="CanvasLayer/VBoxContainer/Title2"]
margin_left = 807.0
margin_right = 945.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.235294, 0.67451, 0.843137, 1 )
custom_colors/font_outline_modulate = Color( 0.956863, 0.705882, 0.105882, 1 )
custom_colors/font_color_shadow = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Golf"
align = 1
valign = 1

[node name="PaddingMid" type="Control" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 160.0
margin_right = 1366.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 80 )

[node name="Story" type="Label" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 352.0
margin_right = 1366.0
margin_bottom = 481.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Golf's parents were kidnapped by the Evil King.
He must set out on a journey to save them
and rid the kingdom from the oppressive ruler.
"
align = 1
valign = 1

[node name="PaddingBot" type="Control" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 278.0
margin_right = 1366.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 80 )

[node name="PressSpace" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 621.0
margin_right = 1366.0
margin_bottom = 649.0
custom_constants/separation = 12
alignment = 1

[node name="Press" type="Label" parent="CanvasLayer/VBoxContainer/PressSpace"]
margin_left = 553.0
margin_right = 613.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Press"
align = 1
valign = 1

[node name="Space" type="Label" parent="CanvasLayer/VBoxContainer/PressSpace"]
margin_left = 625.0
margin_right = 685.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.235294, 0.67451, 0.843137, 1 )
text = "Space"
align = 1
valign = 1

[node name="to" type="Label" parent="CanvasLayer/VBoxContainer/PressSpace"]
margin_left = 697.0
margin_right = 813.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "to continue"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/VBoxContainer/PressSpace"]
anims/show = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ControlEnabledTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 2 )

[node name="Fog" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 4 )
position = Vector2( -16.1684, -0.837646 )
scale = Vector2( 1.99187, 2.40421 )
texture = ExtResource( 7 )
[connection signal="timeout" from="ControlEnabledTimer" to="." method="_on_ControlEnabledTimer_timeout"]
